--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.20</version>
                 <configuration>
                     <includes>
                         <include>**/When*.java</include>
@@ -125,10 +125,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.20</version>
                 <configuration>
                     <includes>
-                        <include>**/features/**/*.java</include>
+                        <include>**/features/**/*.*</include>
                     </includes>
                 </configuration>
             </plugin>
