--- a/pom.xml
+++ b/pom.xml
@@ -128,9 +128,17 @@
                 <version>2.20</version>
                 <configuration>
                     <includes>
-                        <include>**/features/**/*.*</include>
+                        <include>**/features/*.java</include>
                     </includes>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
